# intermediary-agent

./: INTEGRATION.md  PLAN.md  PLAN_PATH_C.md  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml  spike_01_livekit_tts.py  spike_02_livekit_integration.py  spike_03_pure_logic.py
audio/: base.py  livekit_native.py  mock_backend.py
extension/intermediary-agent/: manifest.json
extension/intermediary-agent/assets/: extension.js  intermediary.html
intermediary/: __init__.py  agent.py  config.py  distillation.py  events.py  hermes_client.py  mock_hermes.py  session.py  steering.py  text_intermediary.py  voice_agent.py  worker.py
scripts/: generate_token.py
tests/: conftest.py  test_distillation.py  test_hermes_client.py  test_live_integration.py  test_steering.py  test_text_mvp.py  test_transcript_ui.py  test_voice_agent.py
webui/: app.py  text_server.py
webui/static/: mvp.css  mvp.js  styles.css  transcript.js
webui/templates/: mvp.html  voice.html
