[project]
name = "intermediary-agent"
version = "0.1.0"
description = "LiveKit-based voice intermediary between human and Hermes AI agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.6.0",
    "livekit-plugins-openai>=1.6.0",
    "livekit-plugins-deepgram>=1.6.0",
    "livekit-plugins-cartesia>=1.6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "playwright>=1.40.0",
]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
